# yolo-dl

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  LICENSE.txt  README.md  darknet-test.json5  detect.json5  env.arch.sh  env.sh  env.ubuntu.sh  run_train.sh  rust-toolchain  rust-toolchain.toml  train.json5
bbox/: Cargo.toml
bbox/src/: common.rs  cycxhw.rs  element.rs  hw.rs  into_cycxhw.rs  into_hw.rs  into_tlbr.rs  lib.rs  rect.rs  tlbr.rs  transform.rs  with_opencv.rs
cache/: Cargo.toml
cache-builder/: Cargo.toml
cache-builder/src/: cache.rs  common.rs  main.rs  utils.rs
cache/src/: common.rs  file.rs  label.rs  lib.rs  mem.rs
darknet-config/: Cargo.toml  README.md
darknet-config/cfg/: cspx-p7-mish_hp.cfg  efficientnet-lite3.cfg  efficientnet_b0.cfg  yolo9000.cfg  yolov3-openimages.cfg
darknet-config/examples/: info.rs  torch.rs
darknet-config/src/: avg_pool.rs  batch_norm.rs  common.rs  config.rs  connected.rs  convolutional.rs  cost.rs  crop.rs  darknet.rs  dropout.rs  gaussian_yolo.rs  graph.rs  layer.rs  lib.rs  main.rs  max_pool.rs  meta.rs  misc.rs  model.rs  net.rs  route.rs  shape.rs  shortcut.rs  softmax.rs  torch.rs  unimplemented.rs  up_sample.rs  utils.rs  yolo.rs
darknet-config/src/config/: avg_pool.rs  batch_norm.rs  common.rs  connected.rs  convolutional.rs  cost.rs  crop.rs  darknet.rs  dropout.rs  gaussian_yolo.rs  item.rs  max_pool.rs  misc.rs  mod.rs  net.rs  route.rs  shortcut.rs  softmax.rs  unimplemented.rs  up_sample.rs  yolo.rs
darknet-config/tests/: load_config.rs
darknet-test/: Cargo.toml  build.rs
darknet-test/darknet/: CMakeLists.txt
darknet-test/darknet/src/: image.c  image_opencv.cpp  layer.c  layer.h  layer_kernels.cu  network.c  network_kernels.cu  yolo_v2_class.cpp
darknet-test/src/: common.rs  config.rs  detections.rs  image.rs  kinds.rs  layers.rs  lib.rs  main.rs  network.rs  train.rs
darknet-test/src/darknet/: detections.rs  error.rs  image.rs  layer.rs  layers.rs  mod.rs  network.rs  train.rs  utils.rs
detect/: Cargo.toml
detect/src/: common.rs  config.rs  input_stream.rs  lib.rs  main.rs
mmap-dataset/: Cargo.toml
mmap-dataset/src/: dataset.rs  lib.rs  main.rs  utils.rs
model-config/: Cargo.toml  README.md
model-config/src/: common.rs  group.rs  lib.rs  main.rs  misc.rs  model.rs  module.rs  types.rs  utils.rs  zoo.rs
model-config/src/config/: config.rs  misc.rs  mod.rs  model.rs  module.rs
model-config/src/graph/: dag.rs  darknet.rs  graph.rs  graphviz.rs  mod.rs  newslab_v1.rs  node.rs
model-config/src/module/: concat_2d.rs  conv_2d.rs  conv_bn_2d_block.rs  dark_csp_2d.rs  darknet_route.rs  darknet_shortcut.rs  deconv_bn_2d.rs  detect_2d.rs  dynamic_pad.rs  group_ref.rs  input.rs  input_path.rs  linear.rs  max_pool.rs  merge_detect_2d.rs  mod.rs  module.rs  shape_input.rs  shape_output.rs  sum_2d.rs  up_sample_2d.rs
model-config/tests/: config_test.rs
model-config/tests/cfg/: model.json5  yolov4-csp-no-bn-affine.json5  yolov4-csp-with-bn-affine.json5  yolov4-csp.json5
tch-act/: Cargo.toml
tch-act/src/: impls.rs  lib.rs  trait.rs
tch-goodies/: Cargo.toml
tch-goodies/src/: activation.rs  bbox.rs  common.rs  compound_tensor.rs  detection.rs  lib.rs  lr_schedule.rs  mosaic.rs  ratio.rs  size.rs  tensor.rs  tensor_list.rs  unit.rs  utils.rs
tch-goodies/src/bbox/: cycxhw.rs  mod.rs  rect.rs  rect_label.rs  tlbr.rs
tch-goodies/src/compound_tensor/: area.rs  cycxhw.rs  detection.rs  label.rs  mod.rs  size.rs  tlbr.rs
tch-goodies/src/detection/: convert.rs  dense_detection_samples.rs  dense_detection_tensor.rs  dense_detection_tensor_list.rs  flat_index_tensor.rs  instance_index_tensor.rs  label.rs  merged_dense_detection.rs  mod.rs  object_detection.rs
tch-goodies/src/module/: bottleneck.rs  bottleneck_csp.rs  conv_block.rs  conv_bn_2d.rs  conv_bn_nd.rs  conv_nd.rs  dark_batch_norm.rs  dark_csp_2d.rs  darknet_shortcut.rs  deconv_bn_2d.rs  detect_2d.rs  focus.rs  max_pool.rs  merge_detect_2d.rs  mod.rs  spp.rs  spp_csp_2d.rs  sum_2d.rs
tch-modules/: Cargo.toml
tch-modules/src/: bce_with_logits_loss.rs  common.rs  concat_2d.rs  conv_bn_2d.rs  conv_bn_nd.rs  conv_nd.rs  cross_entropy.rs  dark_batch_norm.rs  dark_csp_2d.rs  darknet_route.rs  deconv_bn_2d.rs  detect_2d.rs  dynamic_pad_nd.rs  focal_loss.rs  group_norm.rs  input.rs  instance_norm.rs  l2_loss.rs  lib.rs  merge_detect_2d.rs  module.rs  spp_csp_2d.rs  sum_2d.rs
tch-nms/: Cargo.toml  LICENSE.txt  README.md  build.rs  nms_cpu.cpp  nms_cuda.cu  nms_kernel.cu
tch-nms/src/: lib.rs
train/: Cargo.toml
train/src/: common.rs  config.rs  lib.rs  logging.rs  main.rs  message.rs  model.rs  training_stream.rs
train/src/data/: cached.rs  coco_.rs  csv.rs  dataset.rs  iii.rs  mmap.rs  mod.rs  record.rs  sanitized.rs  training_stream.rs  utils.rs  voc.rs
train/src/train/: mod.rs  multi_gpu.rs  single_gpu.rs
train/src/util/: lr_scheduler.rs  mod.rs
train/src/utils/: checkpoint.rs  lr_scheduler.rs  mod.rs  rate_counter.rs  tensor.rs
yolo-dl/: Cargo.toml  README.md  train.json5
yolo-dl-doc/: Cargo.toml
yolo-dl-doc/src/: lib.rs
yolo-dl/src/: common.rs  label.rs  lib.rs  loss.rs  model.rs  profiling.rs
yolo-dl/src/dataset/: cached.rs  coco_.rs  csv.rs  dataset.rs  iii.rs  mem_cache.rs  mod.rs  on_demand.rs  record.rs  sanitized.rs  streaming.rs  utils.rs  voc.rs
yolo-dl/src/loss/: average_precision.rs  bce_with_logit_loss.rs  benchmark.rs  config.rs  cross_entropy.rs  focal_loss.rs  inference.rs  l2_loss.rs  loss.rs  loss_.rs  misc.rs  mod.rs  nms.rs  pred_gt_matching.rs  pred_target_matching.rs
yolo-dl/src/model/: activation.rs  config.rs  helper.rs  misc.rs  mod.rs  model.rs  module.rs
yolo-dl/src/processor/: cache_loader.rs  color_jitter.rs  file_cache.rs  mem_cache.rs  mod.rs  mosaic_processor.rs  on_demand.rs  random_affine.rs  random_distort.rs
yolo-dl/src/train/: common.rs  config.rs  logging.rs  main.rs
yolo-dl/src/utils/: algorithm.rs  bbox.rs  mod.rs  ratio.rs  unit.rs  unzip.rs
yolo-dl/tests/csv_dataset/: classes.txt  label.csv
yolo-tool/: Cargo.toml
yolo-tool/src/: main.rs
(+138 files in other folders)
