[workspace]
members = [
    "yolo-dl",
    "train",
    "detect",
    "darknet-config",
    # "darknet-test",
    "tch-goodies",
    "model-config",
    "yolo-dl-doc",
    "tch-nms",
]

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
## enabling 'lto' improves the performance but results in
## very long compilation time.
lto = true

[patch.crates-io]
serde_ini = { git = "https://github.com/jerry73204/serde-ini.git", branch = "enum-support" }
