[package]
name = "bbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
num-traits = "0.2.14"
opencv = { version = "0.63.0", optional = true, default-features = false }

[features]
with-open = ["opencv"]

[dev-dependencies]
approx = "0.5.1"
