[package]
name = "cache-builder"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.3"
noisy_float = { version = "0.1", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.9"
tch-tensor-like = { version = "0.2", features = ["derive"] }
anyhow = "1.0"
approx = "0.4"
derive_more = "0.99"
unzip-n = "0.1"
serde_json = "1.0"
async-std = { version = "1.7", features = ["unstable", "attributes"] }
coco = { git = "https://github.com/jerry73204/coco-rs.git", features = ["async"] }
argh = "0.1"
json5 = "0.2"
par-stream = { git = "https://github.com/jerry73204/par-stream.git" }
futures = "0.3"
rand = "0.7"
percent-encoding = "2.1"
image = "0.23"
tokio = { version = "0.3", features = ["sync"] }
tfrecord = { version = "0.5", features = ["full"] }
ndarray = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
tch-serde = "0.3"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
regex = "1.3"
indexmap = "1.6"
glob = "0.3"
num_cpus = "1.13"
voc-dataset = "0.2"
serde-xml-rs = "0.4"
# xz2 = { version = "0.1", features = ["tokio-io", "futures"] }
tch-goodies = { version = "0.1", path = "../tch-goodies" }
yolo-dl = { version = "0.1", path = "../yolo-dl" }
arraystring = { version = "0.3", features = ["serde-traits"] }
typenum = "1.12"
bincode = "1.3"
memmap = "0.7"
safe-transmute = "0.11"
indicatif = "0.15"
cesu8 = "1.1"
serde-big-array = "0.3"
prettytable-rs = "0.8"
