[package]
name = "darknet-config"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_ini = "0.2.0"
anyhow = "1.0.38"
noisy_float = { version = "0.1.13", features = ["serde-1"] }
itertools = "0.10.0"
binread = "1.4.1"
owning_ref = "0.4.1"
log = "0.4.13"
serde_repr = "0.1.6"
petgraph = "0.5.1"
indexmap = { version = "1.6.1", features = ["serde-1"] }
byteorder = "1.4.2"
derivative = "2.1.3"
ndarray = "0.13.0"
tch = { version = "0.3.1", optional = true }
unzip-n = "0.1.2"
strum = { version = "0.20.0", features = ["derive"] }
image = "0.23.12"
maplit = "1.0.2"
tch-tensor-like = { version = "0.2.0", features = ["derive"] }
tch-goodies = { version = "0.1", path = "../tch-goodies" }
dot = { version = "0.1.4", optional = true }
pretty_env_logger = "0.4.0"
prettytable-rs = "0.8.0"
structopt = "0.3.21"
regex = "1.4.3"

[dev-dependencies]
glob = "0.3.0"

[features]
default = ["tch", "dot"]
