[package]
name = "darknet-config"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_ini = "0.2.0"
anyhow = "1.0.44"
noisy_float = { version = "0.2.0", features = ["serde"] }
itertools = "0.10.1"
binread = "2.2.0"
owning_ref = "0.4.1"
log = "0.4.14"
serde_repr = "0.1.7"
petgraph = "0.6.0"
indexmap = { version = "1.7.0", features = ["serde"] }
byteorder = "1.4.3"
derivative = "2.2.0"
ndarray = "0.15.3"
unzip-n = "0.1.2"
strum = { version = "0.21.0", features = ["derive"] }
image = "0.23.14"
maplit = "1.0.2"
tch-tensor-like = { version = "0.4.0", features = ["derive"] }
tch-goodies = { version = "0.1", path = "../tch-goodies" }
dot = { version = "0.1.4", optional = true }
pretty_env_logger = "0.4.0"
prettytable-rs = "0.8.0"
structopt = "0.3.23"
regex = "1.5.4"

[dev-dependencies]
glob = "0.3.0"

[features]
default = ["dot"]
