[package]
name = "darknet-config"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_ini = "0.2.0"
anyhow = "1.0.53"
noisy_float = { version = "0.2.0", features = ["serde"] }
itertools = "0.10.3"
log = "0.4.14"
serde_repr = "0.1.7"
indexmap = { version = "1.8.0", features = ["serde"] }
byteorder = "1.4.3"
derivative = "2.2.0"
regex = "1.5.4"
num-traits = "0.2.14"

[dev-dependencies]
glob = "0.3.0"
