[package]
name = "darknet-test"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
bindgen = "0.55"
cmake = "0.1"
lazy_static = "1.4"
fs_extra = "1.2"
glob = "0.3"
# itertools = "0.9"

[dependencies]
anyhow = "1.0"
darknet-config = { version = "0.1", path = "../darknet-config" }
tch-goodies = { version = "0.1", path = "../tch-goodies" }
argh = "0.1"
pretty_env_logger = "0.4"
log = "0.4"
tch = { version = "0.3" }
image = "0.23"
libc = "0.2"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"

[features]
default = ["enable-cuda", "enable-cudnn"]
docs-rs = []
enable-cuda = []
enable-cudnn = []
