[package]
name = "darknet-test"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.38"
bindgen = "0.57.0"
cmake = "0.1.45"
lazy_static = "1.4.0"
fs_extra = "1.2.0"
glob = "0.3.0"

[dependencies]
anyhow = "1.0.38"
darknet-config = { version = "0.1", path = "../darknet-config" }
tch-goodies = { version = "0.1", path = "../tch-goodies" }
pretty_env_logger = "0.4.0"
log = "0.4.14"
tch = "0.3.1"
image = "0.23.13"
libc = "0.2.85"
thiserror = "1.0.23"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.123", features = ["derive"] }
structopt = "0.3.21"
json5 = "0.3.0"
tch-serde = "0.4.0"
ndarray = "0.14.0"
itertools = "0.10.0"
glob = "0.3.0"
approx = "0.3.2"
cv-convert = { version = "0.8.1", default-features = false, features = ["tch", "ndarray"] }

[features]
default = ["enable-cuda", "enable-cudnn"]
docs-rs = []
enable-cuda = []
enable-cudnn = []
