[package]
name = "mmap-dataset"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.3.1"
noisy_float = { version = "0.1.13", features = ["serde-1"] }
serde = { version = "1.0.123", features = ["derive"] }
itertools = "0.10.0"
tch-tensor-like = { version = "0.2.0", features = ["derive"] }
anyhow = "1.0.38"
approx = "0.3.2"
unzip-n = "0.1.2"
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
# coco = { git = "https://github.com/jerry73204/coco-rs.git", features = ["async"] }
argh = "0.1.4"
par-stream = { version = "0.3", features = ["runtime_tokio"] }
futures = "0.3.12"
rand = "0.8.3"
image = "0.23.12"
tokio = { version = "1.1.1", features = ["sync"] }
ndarray = "0.14.0"
log = "0.4.14"
regex = "1.4.3"
indexmap = "1.6.1"
glob = "0.3.0"
num_cpus = "1.13.0"
voc-dataset = "0.2.2"
serde-xml-rs = "0.4.1"
# xz2 = { version = "0.1", features = ["tokio-io", "futures"] }
tch-goodies = { version = "0.1", path = "../tch-goodies" }
arraystring = { version = "0.3.0", features = ["serde-traits"] }
typenum = "1.12.0"
bincode = "1.3.1"
memmap = "0.7.0"
safe-transmute = "0.11.0"
indicatif = "0.15.0"
cesu8 = "1.1.0"
serde-big-array = "0.3.1"
prettytable-rs = "0.8.0"
