[package]
name = "model-config"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
noisy_float = { version = "0.2.0", features = ["serde", "approx"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
indexmap = { version = "1.7.0", features = ["serde"] }
derivative = "2.2.0"
json5 = "0.4.1"
itertools = "0.10.3"
petgraph = "0.6.0"
take_mut = "0.2.2"
unzip-n = "0.1.2"
strum = { version = "0.23.0", features = ["derive"] }
dot = { version = "0.1.4", optional = true }
getset = "0.1.2"
darknet-config = { path = "../darknet-config" }
tch-goodies = { version = "0.1", path = "../tch-goodies" }

[dev-dependencies]
glob = "0.3.0"
lazy_static = "1.4.0"
