[package]
name = "model-config"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.54"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
indexmap = { version = "1.8.0", features = ["serde"] }
derivative = "2.2.0"
json5 = "0.4.1"
itertools = "0.10.3"
take_mut = "0.2.2"
strum = { version = "0.23.0", features = ["derive"] }
darknet-config = { path = "../darknet-config" }
tensor-shape = { version = "0.1.0", path = "../tensor-shape" }
tch-act = { version = "0.1.0", path = "../tch-act", features = ["serde"] }
dot = { version = "0.1.4", optional = true }

[dev-dependencies]
glob = "0.3.0"
lazy_static = "1.4.0"
