[package]
name = "tch-act"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"], optional = true }
tch = { version = "0.6.1", optional = true }

[features]
full = ["tch", "serde"]
