[package]
name = "tch-goodies"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
tch = "0.4.1"
itertools = "0.10.0"
image = "0.23.14"
noisy_float = { version = "0.2.0", features = ["serde", "approx"] }
serde = { version = "1.0.125", features = ["derive"] }
tch-tensor-like = { version = "0.3.0", features = ["derive"] }
approx = "0.4.0"
getset = "0.1.1"
unzip-n = "0.1.2"
num-traits = "0.2.14"
maplit = "1.0.2"
log = "0.4.14"
ndarray = "0.15.1"
cv-convert = { version = "0.7.0", default-features = false, features = ["tch", "ndarray"] }

[dev-dependencies]
cv-convert = { version = "0.7.0", default-features = false, features = ["tch", "ndarray"] }
ndarray = "0.15.1"
