[package]
name = "train"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.5.0"
noisy_float = { version = "0.2.0", features = ["serde", "approx"] }
serde = { version = "1.0.126", features = ["derive"] }
itertools = "0.10.1"
tch-tensor-like = { version = "0.4.0", features = ["derive"] }
anyhow = "1.0.41"
approx = "0.5.0"
unzip-n = "0.1.2"
serde_json = "1.0.64"
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
json5 = "0.3.0"
par-stream = { version = "0.3.1", features = ["runtime_tokio"] }
futures = "0.3.15"
rand = "0.8.4"
percent-encoding = "2.1.0"
image = "0.23.14"
tokio = { version = "1.7.1", features = ["sync", "rt-multi-thread", "fs", "io-util"] }
tfrecord = { version = "0.8.0", features = ["full"] }
ndarray = "0.15.3"
tch-serde = "0.6.0"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
regex = "1.5.4"
indexmap = "1.6.2"
glob = "0.3.0"
num_cpus = "1.13.0"
serde-xml-rs = "0.4.1"
tch-goodies = { version = "0.1", path = "../tch-goodies" }
yolo-dl = { version = "0.1", path = "../yolo-dl" }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
structopt = "0.3.21"
model-graph = { version = "0.1", path = "../model-graph" }
darknet-config = { version = "0.1", path = "../darknet-config" }
csv = "1.1.6"
imagesize = "0.8.8"
owning_ref = "0.4.1"
once_cell = "1.8.0"
# tracing-opentelemetry = "0.13.0"
# opentelemetry-jaeger = "0.14.0"
collected = "0.3.0"
derivative = "2.2.0"
serde-semver = "0.1.0"

[features]
profiling = ["yolo-dl/profiling"]
