[package]
name = "yolo-dl-doc"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yolo-dl = { path = "../yolo-dl" }
tch-goodies = { path = "../tch-goodies" }
darknet-config = { path = "../darknet-config" }
model-config = { path = "../model-config" }
