[package]
name = "yolo-dl"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.6.1"
noisy_float = { version = "0.2.0", features = ["serde", "approx"] }
serde = { version = "1.0.130", features = ["derive"] }
itertools = "0.10.1"
tch-tensor-like = { version = "0.5.0", features = ["derive"] }
anyhow = "1.0.45"
approx = "0.5.0"
unzip-n = "0.1.2"
serde_json = "1.0.70"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
coco = { git = "https://github.com/jerry73204/coco-rs.git", rev = "bfb5425f5ba238dac756a8d79e29e7a76c8120c5", features = ["async"] }
argh = "0.1.6"
par-stream = { version = "0.6.0", features = ["runtime-tokio"] }
futures = "0.3.17"
rand = "0.8.4"
percent-encoding = "2.1.0"
tokio = { version = "1.13.0", features = ["sync", "fs"] }
tfrecord = { version = "0.10.0", features = ["full"] }
ndarray = "0.15.3"
log = "0.4.14"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
regex = "1.5.4"
indexmap = "1.7.0"
num_cpus = "1.13.0"
tch-goodies = { version = "0.1", path = "../tch-goodies" }
lazy_static = "1.4.0"
envy = "0.4.2"
dashmap = "4.0.2"
slice-of-array = "0.3.1"
getset = "0.1.1"
model-config = { version = "0.1", path = "../model-config" }
petgraph = "0.6.0"
derivative = "2.2.0"
cv-convert = { version = "0.13.0", default-features = false, features = ["tch", "ndarray"] }
rusty-perm = "0.2.0"
ptree = { version = "0.4.0", optional = true }
strum = { version = "0.22.0", features = ["derive"] }
tch-nms = { version = "0.1.0", path = "../tch-nms" }
iii-formosa-dataset = "0.2.0"
voc-dataset = "0.3.0"
owning_ref = "0.4.1"
imagesize = "0.9.0"
csv = "1.1.6"
glob = "0.3.0"
serde-xml-rs = "0.5.1"
tracing = "0.1.29"
flurry = "0.3.1"
model-graph = { version = "0.1.0", path = "../model-graph" }
tch-modules = { version = "0.1.0", path = "../tch-modules" }
tch-serde = "0.7.0"

[features]
profiling = ["ptree"]

[dev-dependencies]
counter = "0.5.2"
