[package]
name = "yolo-dl"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.6.1"
noisy_float = { version = "0.2.0", features = ["serde", "approx"] }
serde = { version = "1.0.136", features = ["derive"] }
itertools = "0.10.3"
tch-tensor-like = { version = "0.5.0", features = ["derive"] }
anyhow = "1.0.53"
approx = "0.5.1"
unzip-n = "0.1.2"
serde_json = "1.0.79"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
coco = { git = "https://github.com/jerry73204/coco-rs.git", rev = "bfb5425f5ba238dac756a8d79e29e7a76c8120c5", features = ["async"] }
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
futures = "0.3.21"
rand = "0.8.5"
percent-encoding = "2.1.0"
tokio = { version = "1.16.1", features = ["sync", "fs"] }
log = "0.4.14"
chrono = "0.4.19"
indexmap = "1.8.0"
num_cpus = "1.13.1"
tch-goodies = { version = "0.1", path = "../tch-goodies" }
lazy_static = "1.4.0"
dashmap = "5.1.0"
slice-of-array = "0.3.1"
getset = "0.1.2"
model-config = { version = "0.1", path = "../model-config" }
derivative = "2.2.0"
iii-formosa-dataset = "0.2.0"
voc-dataset = "0.3.0"
owning_ref = "0.4.1"
imagesize = "0.9.0"
csv = "1.1.6"
glob = "0.3.0"
serde-xml-rs = "0.5.1"
model-graph = { version = "0.1.0", path = "../model-graph" }
tch-modules = { version = "0.1.0", path = "../tch-modules" }
tch-serde = "0.7.0"
once_cell = "1.9.0"
tch-nms = { git = "https://github.com/jerry73204/tch-nms.git", rev = "9d56c4745d198078a3381a2fdd2a3d4d50e77e19" }
cv-convert = { version = "0.17.2", features = ["tch_0-6", "ndarray_0-15"], optional = true }
ndarray = { version = "0.15.4", optional = true }
ptree = { version = "0.4.0", optional = true }
envy = { version = "0.4.2", optional = true }

[features]
profiling = ["ptree", "envy"]
opencv = ["tch-goodies/opencv"]
debug-assert = ["ndarray", "cv-convert"]

[dev-dependencies]
counter = "0.5.3"
