[package]
name = "yolo-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
model-graph = { version = "0.1.0", path = "../model-graph" }
prettytable-rs = "0.8.0"
